--- a/03-building-agents/module_01_Extending_Agents_with_Tools/M01_demo.ipynb
+++ b/03-building-agents/module_01_Extending_Agents_with_Tools/M01_demo.ipynb
@@ -23,7 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +105,7 @@
       "\n",
       "2. **Decision-Making**: Based on the information they perceive, AI agents can analyze the data and make decisions. This can involve reasoning, planning, and learning from past experiences.\n",
       "\n",
-      "3. **Action**: After making decisions, AI agents can take actions to interact with their environment. This could involve physical actions (like a robot moving) or digital actions (like sending a message or modifying data).\n",
+      "3. **Action**: After making decisions, AI agents can take actions to interact with their environment. This could involve physical actions (like a robot moving) or digital actions (like a software agent executing commands).\n",
       "\n",
       "4. **Autonomy**: Many AI agents operate with a degree of autonomy, meaning they can perform tasks without human intervention. However, some may require human oversight or input.\n",
       "\n",
@@ -99,10 +114,12 @@
       "AI agents can be categorized into different types, such as:\n",
       "\n",
       "- **Reactive Agents**: These agents respond to specific stimuli in their environment without maintaining an internal state or memory.\n",
+      "  \n",
       "- **Deliberative Agents**: These agents maintain an internal model of the world and can plan and reason about their actions.\n",
+      "\n",
       "- **Learning Agents**: These agents can improve their performance over time by learning from data and experiences.\n",
       "\n",
-      "Examples of AI agents include virtual assistants (like Siri or Alexa), autonomous vehicles, recommendation systems, and chatbots. Each of these agents uses AI techniques to perform tasks and interact with users or their environment effectively.\n"
+      "Examples of AI agents include virtual assistants (like Siri or Alexa), autonomous vehicles, chatbots, recommendation systems, and game-playing AI (like AlphaGo). Each of these agents operates within a specific context and uses AI techniques to achieve its objectives.\n"
      ]
     }
    ],
@@ -114,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +154,7 @@
       "2. **Function Call**: To execute the function, you use its name followed by parentheses. If the function requires parameters, you provide them within the parentheses.\n",
       "\n",
       "   ```python\n",
-      "   result = add(5, 3)  # This calls the add function with 5 and 3 as arguments.\n",
+      "   result = add(3, 5)  # This calls the add function with 3 and 5 as arguments\n",
       "   ```\n",
       "\n",
       "3. **Return Value**: Functions can return values using the `return` statement. The value returned can be stored in a variable or used directly.\n",
@@ -159,7 +176,7 @@
       "print(message)  # Output: Hello, Alice!\n",
       "```\n",
       "\n",
-      "In this example, the `greet` function is defined to take one parameter, `name`, and returns a greeting message. The function is then called with the argument \"Alice\", and the result is printed.\n",
+      "In this example, the `greet` function is defined to take one parameter, `name`, and returns a greeting string. The function is then called with the argument \"Alice\", and the result is printed.\n",
       "\n",
       "Function calling is a fundamental aspect of programming that helps in organizing code, promoting reusability, and improving readability.\n"
      ]
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,16 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=None, role='assistant', tool_calls=[ChatCompletionMessageToolCall(id='call_alIVgyMRCmiOm7S2PeUxXKjq', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')])"
+       "AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_c6XI9bQhIQ0eMQP0UXOroj5p', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,18 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SystemMessage(content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\", role='system'),\n",
-       " UserMessage(content='How cold is it in Oslo?', role='user'),\n",
-       " AIMessage(content=None, role='assistant', tool_calls=[ChatCompletionMessageToolCall(id='call_alIVgyMRCmiOm7S2PeUxXKjq', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')])]"
+       "[SystemMessage(role='system', content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\"),\n",
+       " UserMessage(role='user', content='How cold is it in Oslo?'),\n",
+       " AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_c6XI9bQhIQ0eMQP0UXOroj5p', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'call_alIVgyMRCmiOm7S2PeUxXKjq'"
+       "'call_c6XI9bQhIQ0eMQP0UXOroj5p'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +355,7 @@
        "{'city': 'Oslo'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +377,7 @@
        "{'temperature': '-3°C'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,16 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ToolMessage(content='-3°C', role='tool', tool_call_id='call_alIVgyMRCmiOm7S2PeUxXKjq', name='get_weather')"
+       "ToolMessage(role='tool', content='-3°C', tool_call_id='call_c6XI9bQhIQ0eMQP0UXOroj5p', name='get_weather')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,19 +416,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SystemMessage(content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\", role='system'),\n",
-       " UserMessage(content='How cold is it in Oslo?', role='user'),\n",
-       " AIMessage(content=None, role='assistant', tool_calls=[ChatCompletionMessageToolCall(id='call_alIVgyMRCmiOm7S2PeUxXKjq', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')]),\n",
-       " ToolMessage(content='-3°C', role='tool', tool_call_id='call_alIVgyMRCmiOm7S2PeUxXKjq', name='get_weather')]"
+       "[SystemMessage(role='system', content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\"),\n",
+       " UserMessage(role='user', content='How cold is it in Oslo?'),\n",
+       " AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_c6XI9bQhIQ0eMQP0UXOroj5p', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')]),\n",
+       " ToolMessage(role='tool', content='-3°C', tool_call_id='call_c6XI9bQhIQ0eMQP0UXOroj5p', name='get_weather')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='The current temperature in Oslo is -3°C.', role='assistant', tool_calls=None)"
+       "AIMessage(role='assistant', content='The current temperature in Oslo is -3°C.', tool_calls=None)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,20 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SystemMessage(content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\", role='system'),\n",
-       " UserMessage(content='How cold is it in Oslo?', role='user'),\n",
-       " AIMessage(content=None, role='assistant', tool_calls=[ChatCompletionMessageToolCall(id='call_alIVgyMRCmiOm7S2PeUxXKjq', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')]),\n",
-       " ToolMessage(content='-3°C', role='tool', tool_call_id='call_alIVgyMRCmiOm7S2PeUxXKjq', name='get_weather'),\n",
-       " AIMessage(content='The current temperature in Oslo is -3°C.', role='assistant', tool_calls=None)]"
+       "[SystemMessage(role='system', content=\"You are a helpful assistant that can access a tool to get current temperature for cities. Use the tool whenever someone asks about the weather or temperature in a specific location. Infor the user if you don't know the answer.\"),\n",
+       " UserMessage(role='user', content='How cold is it in Oslo?'),\n",
+       " AIMessage(role='assistant', content=None, tool_calls=[ChatCompletionMessageToolCall(id='call_c6XI9bQhIQ0eMQP0UXOroj5p', function=Function(arguments='{\"city\":\"Oslo\"}', name='get_weather'), type='function')]),\n",
+       " ToolMessage(role='tool', content='-3°C', tool_call_id='call_c6XI9bQhIQ0eMQP0UXOroj5p', name='get_weather'),\n",
+       " AIMessage(role='assistant', content='The current temperature in Oslo is -3°C.', tool_calls=None)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,11 +493,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0 (main, Dec  3 2024, 02:24:14) [GCC 10.2.1 20210110]"
+   "version": "3.13.1"
   },
   "vscode": {
    "interpreter": {
@@ -503,5 +527,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
