--- a/03-building-agents/module_02_Structured_Outputs/M02_starter_exercise.ipynb
+++ b/03-building-agents/module_02_Structured_Outputs/M02_starter_exercise.ipynb
@@ -41,6 +41,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from typing import List, Any, Annotated\n",
     "from pydantic import BaseModel, Field\n",
     "from dotenv import load_dotenv\n",
@@ -63,22 +78,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 1: Create the ActionItem Pydantic model\n",
-    "# Hint: Include fields for task, assignee, and due_date with appropriate annotations and descriptions"
+    "# Hint: Include fields for task, assignee, and due_date with appropriate annotations and descriptions\n",
+    "class ActionItem(BaseModel):\n",
+    "    \"\"\"Represents a single action item from a meeting\"\"\"\n",
+    "    task: Annotated[str, Field(description=\"Task to complete\")]\n",
+    "    assignee: Annotated[str, Field(description=\"Person responsible for the task\")]\n",
+    "    due_date: Annotated[str, Field(..., description=\"Due date for the task\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO 2: Create the MeetingSummary Pydantic model\n",
-    "# Hint: Include fields for title, date, participants, key_points, and action_items"
+    "# Hint: Include fields for title, date, participants, key_points, and action_items\n",
+    "class MeetingSummary(BaseModel):\n",
+    "    \"\"\"A structured summary of a meeting\"\"\"\n",
+    "    title: Annotated[str, Field(description=\"Title of the meeting\")]\n",
+    "    date: Annotated[str, Field(description=\"Date when the meeting took place\")]\n",
+    "    participants: Annotated[List[str], Field(description=\"Meeting attendees\")]\n",
+    "    key_points: Annotated[List[str], Field(description=\"Main points discuessed in the meeting\")]\n",
+    "    action_items: Annotated[List[ActionItem], Field(description=\"List of action items from the meeting\")]\n"
    ]
   },
   {
@@ -92,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +150,20 @@
     "        # - Store agent settings (role, instructions, output_model, etc.)\n",
     "        # - Load environment variables\n",
     "        # - Create an LLM instance with the provided configuration\n",
+    "        self.role = role\n",
+    "        self.instructions = instructions\n",
+    "        self.model = model\n",
+    "        self.temperature = temperature\n",
+    "        self.tools = tools\n",
+    "        self.output_model = output_model\n",
+    "\n",
+    "        load_dotenv()\n",
+    "\n",
+    "        self.llm = LLM(\n",
+    "            model=model,\n",
+    "            temperature=temperature,\n",
+    "            tools=tools,\n",
+    "        )\n",
     "\n",
     "\n",
     "    def invoke(self, user_message: str) -> dict:\n",
@@ -139,7 +180,25 @@
     "        # - Create messages list with SystemMessage\n",
     "        # - Add UserMessage\n",
     "        # - Get AI response with structured format if output_model exists\n",
-    "        # - Parse and return the response\n"
+    "        # - Parse and return the response\n",
+    "        messages = [\n",
+    "            SystemMessage(\n",
+    "                content=(\n",
+    "                    f\"You're an AI Agent and your role is {self.role}\"\n",
+    "                    f\"Your instructions: {self.instructions}\"\n",
+    "                )\n",
+    "            )\n",
+    "        ]\n",
+    "        messages.append(UserMessage(content=user_message))\n",
+    "\n",
+    "        if self.output_model:\n",
+    "            ai_message = self.llm.invoke(input=messages, response_format=self.output_model)\n",
+    "            parser = JsonOutputParser()\n",
+    "            return parser.parse(ai_message)\n",
+    "        else:\n",
+    "            ai_message = self.llm.invoke(messages)\n",
+    "            return {\"response\": ai_message.content}\n",
+    "\n"
    ]
   },
   {
@@ -153,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +249,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"title\": \"Project Planning Meeting\",\n",
+      "  \"date\": \"2024-03-15\",\n",
+      "  \"participants\": [\n",
+      "    \"John\",\n",
+      "    \"Sarah\",\n",
+      "    \"Mike\"\n",
+      "  ],\n",
+      "  \"key_points\": [\n",
+      "    \"Reviewed Q1 project timeline\",\n",
+      "    \"Discussed resource allocation\",\n",
+      "    \"Identified potential risks\"\n",
+      "  ],\n",
+      "  \"action_items\": [\n",
+      "    {\n",
+      "      \"task\": \"Update the project plan\",\n",
+      "      \"assignee\": \"John\",\n",
+      "      \"due_date\": \"2024-03-22\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"task\": \"Coordinate with the design team\",\n",
+      "      \"assignee\": \"Sarah\",\n",
+      "      \"due_date\": \"2024-03-20\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"task\": \"Prepare the risk assessment document\",\n",
+      "      \"assignee\": \"Mike\",\n",
+      "      \"due_date\": \"2024-03-31\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "summary = meeting_agent.invoke(meeting_transcript)\n",
     "print(json.dumps(summary, indent=2))"
@@ -209,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +316,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meeting Title: Project Planning Meeting\n",
+      "\n",
+      "Participants:\n",
+      "- John\n",
+      "- Sarah\n",
+      "- Mike\n",
+      "\n",
+      "Action Items:\n",
+      "- Update the project plan (Assigned to: John, Due: 2024-03-22)\n",
+      "- Coordinate with the design team (Assigned to: Sarah, Due: 2024-03-20)\n",
+      "- Prepare the risk assessment document (Assigned to: Mike, Due: 2024-03-31)\n"
+     ]
+    }
+   ],
    "source": [
     "# Access structured data\n",
     "print(\"Meeting Title:\", validated_summary.title)\n",
@@ -244,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -258,9 +373,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
