--- a/03-building-agents/module_03_State_Management/M03_demo.ipynb
+++ b/03-building-agents/module_03_State_Management/M03_demo.ipynb
@@ -26,7 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "84dd2173-abea-4c96-b453-eb127d4f3e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6c52e2d2",
    "metadata": {},
    "outputs": [],
@@ -63,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "99d54277",
    "metadata": {},
    "outputs": [],
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c2afea8b",
    "metadata": {},
    "outputs": [],
@@ -100,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b26b75e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def step_input(state: Schema) -> Schema:\n",
     "    \"\"\"First step: Increment the input value.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        state: Current state containing input value\n",
     "        \n",
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7ff44f67",
    "metadata": {},
    "outputs": [],
@@ -147,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "715d8af4",
    "metadata": {},
    "outputs": [],
@@ -160,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "98192469",
    "metadata": {},
    "outputs": [],
@@ -170,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7ef4ea11",
    "metadata": {},
    "outputs": [],
@@ -182,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "0ee8aa7c",
    "metadata": {},
    "outputs": [
@@ -194,7 +210,7 @@
        " 'double': [Transition('double' -> ['__termination__'])]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8c3ab77f",
    "metadata": {},
    "outputs": [
@@ -230,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "Run('0e3c6b52-8121-4378-a44e-49785aaa5888')"
+       "Run('e36a1ad0-9916-4919-88dd-cc4e9864ce59')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,19 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "48310b3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[__entry__.Snapshot({'input': 4}),\n",
-       " input.Snapshot({'input': 4, 'output': 5}),\n",
-       " double.Snapshot({'input': 4, 'output': 10})]"
+       "[Snapshot('4862282c-9c7d-4e08-a91f-85d18c172af1') @ [2025-08-30 22:26:57.735128]: __entry__.State({'input': 4}),\n",
+       " Snapshot('5a8a017b-9339-47e1-88da-de9f577fd25a') @ [2025-08-30 22:26:57.735236]: input.State({'input': 4, 'output': 5}),\n",
+       " Snapshot('b2590652-99b9-4c73-a269-23e7d9d561eb') @ [2025-08-30 22:26:57.735311]: double.State({'input': 4, 'output': 10})]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "60018610",
    "metadata": {},
    "outputs": [],
@@ -299,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "31531a68",
    "metadata": {},
    "outputs": [],
@@ -309,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "43ea6c00",
    "metadata": {},
    "outputs": [],
@@ -328,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "7835f893",
    "metadata": {},
    "outputs": [],
@@ -341,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "76dfc504",
    "metadata": {},
    "outputs": [],
@@ -351,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f7fd40fd",
    "metadata": {},
    "outputs": [],
@@ -373,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "a372fded",
    "metadata": {},
    "outputs": [],
@@ -385,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "c5fc83f4",
    "metadata": {},
    "outputs": [
@@ -396,7 +412,7 @@
        " 'increment': [Transition('increment' -> ['increment', '__termination__'])]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "6ec591ce",
    "metadata": {},
    "outputs": [
@@ -425,10 +441,10 @@
     {
      "data": {
       "text/plain": [
-       "Run('33630c81-9b65-42ce-b406-60523de03622')"
+       "Run('84ba6b29-f4b8-49fe-9267-62fc4113dff4')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,20 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "3bb67171",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[__entry__.Snapshot({'count': 0, 'max_value': 3}),\n",
-       " increment.Snapshot({'count': 1, 'max_value': 3}),\n",
-       " increment.Snapshot({'count': 2, 'max_value': 3}),\n",
-       " increment.Snapshot({'count': 3, 'max_value': 3})]"
+       "[Snapshot('e7ce1567-b755-46ea-9c63-bc12836f1359') @ [2025-08-30 22:54:00.981980]: __entry__.State({'count': 0, 'max_value': 3}),\n",
+       " Snapshot('2ea7087e-694f-4d57-ae9d-3d1e6b8ce712') @ [2025-08-30 22:54:00.982045]: increment.State({'count': 1, 'max_value': 3}),\n",
+       " Snapshot('7c69ff10-94e9-4424-86b0-fa393bd98e2c') @ [2025-08-30 22:54:00.982093]: increment.State({'count': 2, 'max_value': 3}),\n",
+       " Snapshot('e76eb621-1d64-4200-aeb9-9ee97601beb3') @ [2025-08-30 22:54:00.982139]: increment.State({'count': 3, 'max_value': 3})]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "65fca299",
    "metadata": {},
    "outputs": [
@@ -475,7 +491,7 @@
        "{'count': 3, 'max_value': 3}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
