--- a/03-building-agents/module_02_Structured_Outputs/M02_demo.ipynb
+++ b/03-building-agents/module_02_Structured_Outputs/M02_demo.ipynb
@@ -25,6 +25,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1cc88fef-fb91-41f4-bf4e-d08139f87517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d62df066",
    "metadata": {},
@@ -41,7 +57,8 @@
     "    JsonOutputParser, \n",
     "    PydanticOutputParser, \n",
     "    ToolOutputParser,\n",
-    ")"
+    ")\n",
+    "import os"
    ]
   },
   {
@@ -53,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 2,
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0c14ad6c",
    "metadata": {},
    "outputs": [],
@@ -87,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "df1447cb",
    "metadata": {},
    "outputs": [],
@@ -100,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2c1e17ef",
    "metadata": {},
    "outputs": [
@@ -110,7 +127,7 @@
        "AIMessage(content='Event: Science Fair  \\nParticipants: Alice and Bob  \\nDay: Friday', role='assistant', tool_calls=None)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6f1c3624",
    "metadata": {},
    "outputs": [
@@ -153,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e650cfd4",
    "metadata": {},
    "outputs": [],
@@ -170,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "db706299",
    "metadata": {},
    "outputs": [],
@@ -183,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "700f35ef",
    "metadata": {},
    "outputs": [],
@@ -194,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "52cffc0a",
    "metadata": {},
    "outputs": [
@@ -204,7 +221,7 @@
        "{'name': 'Science Fair', 'date': 'Friday', 'participants': ['Alice', 'Bob']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6aa09ace",
    "metadata": {},
    "outputs": [],
@@ -248,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4d2928f1",
    "metadata": {},
    "outputs": [],
@@ -261,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "6239c2d9",
    "metadata": {},
    "outputs": [
@@ -271,7 +288,7 @@
        "AIMessage(content='{\"name\":\"Science Fair\",\"date\":\"Friday\",\"participants\":[\"Alice\",\"Bob\"]}', role='assistant', tool_calls=None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "30c92d3a",
    "metadata": {},
    "outputs": [
@@ -293,7 +310,7 @@
        "{'name': 'Science Fair', 'date': 'Friday', 'participants': ['Alice', 'Bob']}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d983e723",
    "metadata": {},
    "outputs": [
@@ -316,7 +333,7 @@
        "CalendarEvent(name='Science Fair', date='Friday', participants=['Alice', 'Bob'])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "9e50611e",
    "metadata": {},
    "outputs": [
@@ -340,7 +357,7 @@
        "['Alice', 'Bob']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
