--- a/03-building-agents/module_07_Interacting_with_Databases/M07_demo.ipynb
+++ b/03-building-agents/module_07_Interacting_with_Databases/M07_demo.ipynb
@@ -32,7 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "c2de23cc-263e-4ee9-ad19-4ce0dd2e6e5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2aafeb1d",
    "metadata": {},
    "outputs": [],
@@ -51,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a0cccb7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ce9b839e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "33307bc1",
    "metadata": {},
    "outputs": [],
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b5e4d752",
    "metadata": {},
    "outputs": [],
@@ -132,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "fd123310",
    "metadata": {},
    "outputs": [],
@@ -155,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "cbc60e5c",
    "metadata": {},
    "outputs": [
@@ -165,7 +181,7 @@
        "['sales']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a9fa2b40",
    "metadata": {},
    "outputs": [
@@ -187,7 +203,7 @@
        "{'sales': \"[{'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': None, 'primary_key': 1}, {'name': 'transaction_date', 'type': DATE(), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'model', 'type': VARCHAR(length=50), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'price', 'type': FLOAT(), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'quantity', 'type': INTEGER(), 'nullable': True, 'default': None, 'primary_key': 0}, {'name': 'customer_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'primary_key': 0}]\"}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "10e0615e",
    "metadata": {},
    "outputs": [
@@ -212,7 +228,7 @@
        "\"[(1, '2024-05-22', 'Dell XPS 15', 1308.04, 4, 1037), (2, '2024-06-07', 'Dell Inspiron 15', 2399.23, 4, 1044), (3, '2024-12-07', 'Dell XPS 13', 2481.61, 2, 1013), (4, '2024-06-21', 'Dell G5 15', 505.98, 4, 1054), (5, '2024-01-04', 'Dell Inspiron 14', 1429.78, 1, 1097), (6, '2024-04-23', 'Dell Inspiron 14', 1141.06, 2, 1074), (7, '2024-06-18', 'Dell Latitude 7310', 1740.03, 2, 1094), (8, '2024-03-12', 'Dell XPS 15', 521.49, 3, 1019), (9, '2024-02-10', 'Dell Latitude 7410', 545.36, 4, 1003), (10, '2024-12-17', 'Dell Inspiron 14', 668.95, 3, 1010)]\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b85b6daf",
    "metadata": {},
    "outputs": [],
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ccbd8900",
    "metadata": {},
    "outputs": [],
@@ -255,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "adfec92a",
    "metadata": {},
    "outputs": [],
@@ -267,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "dd2485ac",
    "metadata": {},
    "outputs": [
@@ -290,13 +306,13 @@
       " -> (role = system, content = You are a Sr. SQL developer tasked with generating SQL queries. Perform the following steps:\n",
       "First, find out the appropriate table name based on all tables. Then get the table's schema to understand the columns. With the table name and the schema, generate the ANSI SQL query you think is applicable to the user question. Finally, use a tool to execute the above SQL query and output the result based on the user question., tool_calls = None)\n",
       " -> (role = user, content = How many Dell XPS 15 were sold?, tool_calls = None)\n",
-      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_AYgsXgNYk3K24cmSqSb2D6Va', function=Function(arguments='{}', name='list_tables_tool'), type='function')])\n",
+      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_eaySQWT9lhiGPxw2RDZIK1S7', function=Function(arguments='{}', name='list_tables_tool'), type='function')])\n",
       " -> (role = tool, content = \"['sales']\", tool_calls = None)\n",
-      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_6l4LOar35erNEo8yNQzbFq9x', function=Function(arguments='{\"table_name\":\"sales\"}', name='get_table_schema_tool'), type='function')])\n",
+      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_LM7qmVW5MxHgpavrrOvViwYI', function=Function(arguments='{\"table_name\":\"sales\"}', name='get_table_schema_tool'), type='function')])\n",
       " -> (role = tool, content = \"[{'name': 'id', 'type': INTEGER(), 'nullable': False, 'default': None, 'primary_key': 1}, {'name': 'transaction_date', 'type': DATE(), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'model', 'type': VARCHAR(length=50), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'price', 'type': FLOAT(), 'nullable': False, 'default': None, 'primary_key': 0}, {'name': 'quantity', 'type': INTEGER(), 'nullable': True, 'default': None, 'primary_key': 0}, {'name': 'customer_id', 'type': INTEGER(), 'nullable': True, 'default': None, 'primary_key': 0}]\", tool_calls = None)\n",
-      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_5GI9q7b7utbT7UwRTPA39vyS', function=Function(arguments='{\"query\":\"SELECT SUM(quantity) AS total_sold FROM sales WHERE model = \\'Dell XPS 15\\';\"}', name='execute_sql_tool'), type='function')])\n",
+      " -> (role = assistant, content = None, tool_calls = [ChatCompletionMessageToolCall(id='call_sFrlT6gmArZbEcIvUgGOZe12', function=Function(arguments='{\"query\":\"SELECT SUM(quantity) AS total_sold FROM sales WHERE model = \\'Dell XPS 15\\';\"}', name='execute_sql_tool'), type='function')])\n",
       " -> (role = tool, content = \"[(57,)]\", tool_calls = None)\n",
-      " -> (role = assistant, content = A total of 57 Dell XPS 15 units were sold., tool_calls = None)\n"
+      " -> (role = assistant, content = A total of 57 Dell XPS 15 laptops were sold., tool_calls = None)\n"
      ]
     }
    ],
@@ -321,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
