--- a/03-building-agents/module_08_Agentic_RAG/M08_starter_exercise.ipynb
+++ b/03-building-agents/module_08_Agentic_RAG/M08_starter_exercise.ipynb
@@ -39,7 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "c02f4415-346a-4543-8100-15ffb78dc102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = Path(__file__).parent if \"__file__\" in globals() else Path.cwd()\n",
+    "parent = nb_dir.parent  # points to 03-building-agents\n",
+    "if str(parent) not in sys.path:\n",
+    "    sys.path.insert(0, str(parent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2023814b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "08286c75",
    "metadata": {},
    "outputs": [],
@@ -77,17 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4002bf4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34fff998",
    "metadata": {},
    "outputs": [],
@@ -105,10 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "96ff19b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreManager():<chromadb.api.client.Client object at 0x1150d41a0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db = VectorStoreManager(OPENAI_API_KEY)\n",
     "db"
@@ -116,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "de2f3828",
    "metadata": {},
    "outputs": [],
@@ -126,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "92f0f38a",
    "metadata": {},
    "outputs": [],
@@ -335,7 +373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -349,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
